0.22
 - Fix minimal version of Mo::utils.

0.21 2022-10-17T21:15:42+02:00
 - Add own list of language codes to fix issues with them.

0.20 2022-08-14T02:45:12+02:00
 - Improve SEE ALSO section in Value object.
 - Rename files in examples/ directory to better names.
 - Unify LICENSE AND COPYRIGHT section in doc.

0.19 2022-07-09T16:32:51+02:00
 - Add page_id to Lexeme.
 - Add page_id to Lexeme::Wikidata::DogCzechNoun fixture.

0.18 2022-07-09T16:16:36+02:00
 - Add id to Lexeme.
 - Add id to Lexeme::Wikidata::DogCzechNoun fixture.
 - Add alias in another language to Datatype::Item::Wikidata::Dog fixture.
 - Unify LICENSE AND COPYRIGHT section in doc.

0.17 2022-07-07T21:33:43+02:00
 - Add doc for Snak::Wikidata::GivenName::Douglas fixture.
 - Add fixture for GrammaticalGender::Masculine.
 - Improve Lexeme::Wikidata::DogCzechNoun fixture to reality.
 - Improve Property::Wikidata::InstanceOf object.
 - Remove ';;' from example.
 - Rename Reference::Wikidata::Fixture1 fixture to VIAF.

0.16 2022-06-25T16:25:54+02:00
 - Add Dog item fixture.
 - Add InstanceOf::CommonLivingOrganism statement fixture.
 - Rename Human fixture to better DouglasAdams.
 - Update README file.

0.15 2022-06-25T11:42:12+02:00
 - Fix Mediainfo doc.
 - Add fixture for Mediainfo.
 - Add fixture for MediainfoSnak.
 - Add fixture for MediainfoStatement.

0.14 2022-06-24T13:37:55+02:00
 - Add modified and explicit ns parameters to Item fixture.
 - Add modified parameter to Lexeme fixture.
 - Add modified parameter to Property fixture.
 - Add tests for fixtures.
 - Add tests for Lexeme.
 - Change ns for Lexeme to 146 (as Wikidata).

0.13 2022-06-23T00:09:39+02:00
 - Add tests for fixtures.
 - Add tests for Property.
 - Fix ns default value in doc of Property.
 - Fix place of error test in constructor in Item.

0.12 2022-05-29T20:11:07+02:00
 - Add Property datatype.
 - Add test instance for Property.
 - Fix minimal version of List::Util with none().
 - Fix versions in test instances.