@@ -1,4 +1,6 @@
 0.22
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Mediainfo::Commons::ImageOfHuman.
  - Fix minimal version of Mo::utils.
 
 0.21 2022-10-17T21:15:42+02:00
